<resources>
    <string name="app_name">InClassExamples_W20</string>
    <string name="hello">Hello Button</string>
    <string name="imgButton">Picture Button</string>
    <string name="firstText">This is the Text View</string>
    <string name="hint"> This hint disappears </string>
    <string name="checkbox"> This is checkbox</string>
    <string name="switchItUp">This is a switch</string>
    <string name="radio"> Radio Button</string>
    <string name="item1">1</string>
    <string name="item2">2</string>
    <string name="item3">3</string>
    <string name="item4">4</string>
    <string name="item5">5</string>
    <string name="item6">6</string>
    <string name="item7">7</string>
</resources>
