<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/myButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/hello" />

    <ImageButton
        android:id="@+id/imgButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_dialog_email"
        android:text="@string/imgButton" />
<!--        tools:srcCompat="@tools:sample/avatars" />-->

    <TextView
        android:id="@+id/firstText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/firstText"/>

    <EditText
        android:id="@+id/firstEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"/>

    <CheckBox
        android:id="@+id/checkb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox" />

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switchItUp" />

    <RadioButton
        android:id="@+id/myRadioB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio" />

    <ListView
        android:id="@+id/myListView"
        android:layout_width="match_parent"
        android:layout_height="187dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>